--- a/resume.Rmd
+++ b/resume.Rmd
@@ -1,6 +1,6 @@
 ---
-title: Nick Strayer's Resume"
-author: Nick Strayer
+title: Fernando Gomez's Resume"
+author: Fernando Gomez
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
@@ -54,11 +54,10 @@ Contact {#contact}
 
 
 
-- <i class="fa fa-envelope"></i> nick.strayer@gmail.com
-- <i class="fa fa-twitter"></i> NicholasStrayer
-- <i class="fa fa-github"></i> github.com/nstrayer
-- <i class="fa fa-link"></i> [nickstrayer.me](http://nickstrayer.me/)
-- <i class="fa fa-phone"></i> (734) 645-0110
+- <i class="fa fa-envelope"></i> gomezfernando17@gmail.com
+- <i class="fa fa-github"></i> https://github.com/gomez759
+- <i class="fa fa-link"></i> [fernandogomez.me](https://www.linkedin.com/in/fernando-gomez-730aa4152/)
+- <i class="fa fa-phone"></i> (559) 577-8590
 
 
 
@@ -70,12 +69,7 @@ Language Skills {#skills}
 skills <- tribble(
   ~skill,               ~level,
   "R",                  5,
-  "Javascript (d3.js)", 4.5,
-  "Python",             4,
-  "Bash",               3.5,
-  "SQL",                3,
-  "C++",                3,
-  "AWK",                3
+  "SPSS",               5
 )
 build_skill_bars(skills)
 ```
@@ -85,7 +79,7 @@ build_skill_bars(skills)
 Open Source Contributions {#open-source}
 --------------------------------------------------------------------------------
 
-All projects available at `github.com/nstrayer/<name>`
+All projects available at `https://github.com/gomez759`
 
 
 - `shinysense`: R package to use sensor data in Shiny apps
@@ -93,18 +87,12 @@ All projects available at `github.com/nstrayer/<name>`
 - `slid3r`: D3 add-on for fully svg slider inputs
 
 
-More info {#more-info}
---------------------------------------------------------------------------------
-
-See full CV at nickstrayer.me/cv for more complete list of positions and publications.
-
-
 Disclaimer {#disclaimer}
 --------------------------------------------------------------------------------
 
 Made w/ [**pagedown**](https://github.com/rstudio/pagedown). 
 
-Source code: [github.com/nstrayer/cv](https://github.com/nstrayer/cv).
+Source code: [https://github.com/gomez759/cv](https://github.com/nstrayer/cv).
 
 Last updated on `r Sys.Date()`.
 
@@ -114,11 +102,11 @@ Last updated on `r Sys.Date()`.
 Main
 ================================================================================
 
-Nick Strayer {#title}
+Fernando Gomez {#title}
 --------------------------------------------------------------------------------
 
 ```{r}
-intro_text <- "I have made [visualizations viewed by hundreds of thousands of people](https://www.nytimes.com/interactive/2016/08/26/us/college-student-migration.html), [sped up query times for 25 terabytes of data by an average of 4,800 times](https://livefreeordichotomize.com/2019/06/04/using_awk_and_r_to_parse_25tb/), and built [packages for R](https://github.com/nstrayer/shinysense) that let you [do magic](http://nickstrayer.me/dataDayTexas/).
+intro_text <- "I have made [a dashboard for the program that my organization oversees to visualize the impact the grant has made in supporting Graduate Medical Education residency programs in california](https://calmedforce.shinyapps.io/CMF_dashboard/?_ga=2.83196688.785193857.1646673253-1887722162.1646673253)
 
 Currently searching for a data science position that allows me to build tools using visualization and machine learning to help people explore and understand their data. 
 "
@@ -143,14 +131,6 @@ Selected Positions {data-icon=suitcase}
 
 ```{r}
 position_data %>% print_section('positions')
-```
-
-Selected Writing {data-icon=newspaper}
---------------------------------------------------------------------------------
-
-
-```{r}
-position_data %>% print_section('writings')
 ```
 
 
